<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.preference.SwitchPreferenceCompat
    android:defaultValue="false"
    android:key="@string/pref_screen_lock"
    android:summaryOff="Use default sleep timeout"
    android:summaryOn="Never sleep while playing"
    android:title="Stay Awake" />

  <androidx.preference.SwitchPreferenceCompat
      android:defaultValue="false"
      android:key="@string/pref_hide_hint"
      android:summary="@string/pref_hide_hint_summary"
      android:title="@string/pref_hide_hint_title" />


  <androidx.preference.ListPreference
      android:defaultValue="system"
      android:entries="@array/entries_theme_pref"
      android:entryValues="@array/entryvalues_theme_pref"
      android:key="@string/pref_theme"
      android:title="Theme"
      android:summary="%s" />

  <androidx.preference.SeekBarPreference
      android:defaultValue="8"
      android:key="@string/pref_animation_speed"
      android:min="0"
      android:max="10"
      app:adjustable="true"
      app:showSeekBarValue="false"
      app:updatesContinuously="true"
      android:title="@string/pref_animation_duration_title"/>

  <androidx.preference.PreferenceCategory
      android:title="Card Customization">

    <com.antsapps.triples.CardCustomizationPreference
        android:key="card_customization"
        android:title="Card Customization" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
      android:title="@string/account_settings">

    <androidx.preference.Preference
        android:key="account_user"
        android:title="@string/account_user_title"
        android:summary="@string/account_not_signed_in"
        android:selectable="false"/>

    <androidx.preference.Preference
        android:key="account_signin_out"
        android:title="@string/account_sign_in" />

    <androidx.preference.Preference
        android:key="account_delete_data"
        android:title="@string/account_delete_data_title"
        android:summary="@string/account_delete_data_summary" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
      android:title="@string/pref_about_title">

    <androidx.preference.Preference
        android:key="pref_version"
        android:title="@string/pref_version_title"
        android:selectable="false"/>

    <androidx.preference.Preference
        android:key="pref_feedback"
        android:title="@string/pref_feedback_title" />

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
