<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/hint"
      android:icon="@drawable/ic_lightbulb"
      app:showAsAction="always"
      android:title="@string/hint" />
  <item
      android:id="@+id/shuffle"
      android:icon="@drawable/ic_shuffle"
      app:showAsAction="ifRoom"
      android:title="@string/shuffle" />
  <item
      android:id="@+id/pause"
      android:icon="@drawable/ic_pause"
      app:showAsAction="always"
      android:title="@string/pause" />
  <item
      android:id="@+id/play"
      android:icon="@drawable/ic_play"
      app:showAsAction="always"
      android:title="@string/play" />
  <item
      android:id="@+id/help"
      android:icon="@drawable/ic_help"
      app:showAsAction="ifRoom|withText"
      android:title="@string/help" />
  <item
      android:id="@+id/settings"
      app:showAsAction="never"
      android:title="@string/settings" />
</menu>