<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/color_background_secondary"
  android:padding="10dp"
  tools:context="com.antsapps.triples.BaseGameListActivity">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/statistics_for"
        android:textColor="@color/color_separator"
        android:textStyle="bold" />

      <Spinner
        android:id="@+id/period_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/graph"
        android:textColor="@color/color_separator"
        android:textStyle="bold" />

      <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/color_separator" />

      <com.antsapps.triples.stats.HistogramView
        android:id="@+id/graph"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/summary"
        android:textColor="@color/color_separator"
        android:textStyle="bold" />

      <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

      <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/number_completed" />

          <TextView
            android:id="@+id/number_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/fastest_time" />

          <TextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/average_time" />

          <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </TableRow>
      </TableLayout>
    </LinearLayout>
  </LinearLayout>

</ScrollView>