<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/games_services"
  android:layout_height="wrap_content"
  android:layout_width="match_parent"
  android:orientation="vertical"
  android:paddingLeft="@dimen/stats_side_padding"
  android:paddingRight="@dimen/stats_side_padding">

  <LinearLayout
    android:id="@+id/sign_in_bar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="#f0f0f0"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="10dp">

    <com.google.android.gms.common.SignInButton
      android:id="@+id/sign_in_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <TextView
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_why"
      android:layout_marginLeft="10dp"
      android:textColor="#808080" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/games_services_bar">

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/achievements"
      android:id="@+id/achievements"
      android:layout_weight="1" />

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/leaderboards"
      android:id="@+id/leaderboards"
      android:singleLine="false"
      android:layout_weight="1" />
  </LinearLayout>
</LinearLayout>
