<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="@dimen/stats_side_padding"
  android:paddingRight="@dimen/stats_side_padding"
  android:paddingTop="10dp"
  android:orientation="vertical">

  <TextView
    android:id="@+id/list_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:text="@string/list_of_games"
    android:textColor="@color/color_separator"
    android:textStyle="bold"
    android:paddingTop="@dimen/stats_vert_padding"
    android:paddingBottom="@dimen/stats_vert_padding" />

  <View
    android:id="@+id/list_divider"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@color/color_separator" />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/date_header"
      style="@style/stats_list_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:gravity="left|center_vertical"
      android:text="@string/date_played" />

    <TextView
      android:id="@+id/result_header"
      style="@style/stats_list_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:gravity="right|center_vertical"
      android:text="@string/time_taken" />

    <TextView
      android:id="@+id/cards_header"
      style="@style/stats_list_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right|center_vertical"
      android:text="CARDS"
      android:visibility="gone" />
  </LinearLayout>

  <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray" />

</LinearLayout>
